--- a/BusIk/app/src/main/res/values/strings.xml
+++ b/BusIk/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="operator_role">Оператор</string>
     <string name="select_route">Выбрать маршрут</string>
     <string name="select_button_text">Поиск</string>
+    <string name="history_button_text">История заказов</string>
     <string name="passenger_count">0</string>
     <string name="trip_date">05.04.2023</string>
     <string name="date_picker_text">Выбрать дату</string>
