Create Schedule + Some Fixes

--- a/BusIk/app/src/main/res/values/strings.xml
+++ b/BusIk/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="login_button_text">Авторизоваться</string>
     <string name="register_text">Зарегестрироваться</string>
     <string name="register_title">Регистрация</string>
-    <string name="client_role">Клиент</string>
+    <string name="client_role">Пассажир</string>
     <string name="driver_role">Водитель</string>
-    <string name="operator_role">Оператор</string>
+    <string name="operator_role">Диспетчер</string>
     <string name="select_route">Выбрать маршрут</string>
     <string name="select_button_text">Поиск</string>
     <string name="history_button_text">История заказов</string>
